  S3, or deletes objects from S3 after they have been downloaded.
- Property settings in the synchronize.properties file, or in the file referred
  to by the --properties option, will override properties of the same name in
  jets3t.properties. This makes it easy to create task-specific properties
  files.


TOOLKIT

  * General
  
- Fixed bug in RestS3Service that caused failures in some circumstances when 
  buckets were created with the "US" location.
- S3Service instances can now be configured individually by providing a
  JetS3tProperties object when constructing the service.
- Added support to FileComparer for listing objects based on prefix "partitions"
  that allow a bucket to be listed by multiple simultaneous threads. This can
  speed up listings for large buckets containing many virtual subdirectories.
  To use multiple partitions when building S3 object maps, configure the
  jets3t.properties item "filecomparer.bucket-listing.<bucketname>" to specify
  a delimiter string and a traversal depth value separated by a comma, eg:
  filecomparer.bucket-listing.my-bucket=/,2
  to partition the bucket my-bucket based on the '/' delimiter to a depth of
  2 virtual subdirectories.


  * REST Implementation
  
- The XML parsing code now copes better when object names contain a carriage 
  return character. A work-around is applied to prevent the Java XML parser
  from misinterpreting these characters, a fault which could cause some objects
  to become un-deletable.
- Changed default AuthenticationPreemptive setting for HttpClient connections 
  from true to false, to improve compatibility with NTLM proxies. Preemptive
  auth can be turned on by setting "httpclient.authentication-preemptive" to 
  true in jets3t.properties.


  * Multi-threaded Service

- Added a new listObjects method that performs a multi-threaded listing of a
  bucket's contents. You provide an array of prefix strings which serve to 